--- a/web/WEB-INF/pages/common/menu_new.vm
+++ b/web/WEB-INF/pages/common/menu_new.vm
@@ -45,36 +45,21 @@
     			#end	
     		</ul>
     	</div>
-    	
-    	<li>
-    		<a  onClick="javascript:showdesc(13)"  class=menubg>
-				<img src= /images/expand.gif border="0" align="absmiddle" id=pic12>报表打印
-			</a>
-		</li>
-    	<div id="desc13" style="display: none">
-    		<ul>
-    			<li><a href="/customer/actions.html?method=list&oc=all&cm=c1" class=menubg2>来文</a></li>
-    			<li><a href="/customer/actions.html?method=list&oc=today&cm=c2"  class=menubg2>发文</a></li>
-    			<li><a href="/customer/actions.html?method=list&oc=todaylinked&cm=c3"  class=menubg2>内部文件</a></li>			
-    		</ul>
-    	</div>
-    	
 		</ul>
 	</div>
 	<div  class="lmain" onClick="javascript:showdesc(9)">档案管理</div>
-	<div class="lmain2" id="desc9" style="display:#if($memuModule == "file" && $cm.indexOf("da")>=0)block#else none#end">
+	<div class="lmain2" id="desc9" style="display:#if($memuModule == "file" && $cm.indexOf("da")>=0||$cm.indexOf("dsag")>=0)block#else none#end">
 		<ul>
 	    	<li>
 		    	<a  onClick="javascript:showdesc(91)" class=menubg >
 		    	 #set($menuOpen = false)
-                		#if($memuModule == "file" )
+                		#if($memuModule == "file" && $cm.indexOf("da")>=0)
                 			#set($menuOpen = true)
                 		#end
-                		
-     				<img src=#if($menuOpen || $cm!='')/images/collapse.gif#else /images/expand.gif#end border="0" align="absmiddle" id=pic91>档案录入
+     				<img src=#if($menuOpen || $cm.indexOf("da")>=0)/images/collapse.gif#else /images/expand.gif#end border="0" align="absmiddle" id=pic91>档案录入
      			</a>
  			</li>
-			<div id="desc91" style="display:#if($memuModule == "file")block#else none#end">
+			<div id="desc91" style="display:#if($memuModule == "file" && $cm.indexOf("da")>=0)block#else none#end">
 				#set($index=1)
     			#foreach($infosort in $vMUtils.getInfoSortByparentId(219))
     			#set($strIndex="da"+$index)
@@ -88,19 +73,28 @@
 				#set($index=$index+1)
     			#end					
 			</div>
-			
 			<li>
 				<a  onClick="javascript:showdesc(92)"  class=menubg>
-					<img src= /images/expand.gif border="0" align="absmiddle" id=pic92>归档
-				</a>
+					#set($menuOpen = false)
+        		#if($memuModule == "file" && $cm.indexOf("dsag")>=0)
+        			#set($menuOpen = true)
+        		#end
+				<img src=#if($menuOpen && $cm.indexOf("dsag")>=0)/images/collapse.gif#else /images/expand.gif#end border="0" align="absmiddle" id=pic92>归档</a>
 			</li>
-    		<div id="desc92" style="display: none">
-    		<ul>
-    			<li>
-    				<a href="/linkman/actions.html?method=list&formal=formal1&cm=cf9" class=menubg2>我的全部联系人</a>
-    			</li>
-    		</ul>
-    		</div>
+	    	<div id="desc92"  style="display:#if($memuModule == "file" && $cm.indexOf("dsag")>=0)block#else none#end">
+	    		<ul>
+	    			#set($index=1)
+	    			#foreach($infosort in $vMUtils.getInfoSortByparentId(219))
+	    			#set($strIndex="dsag"+$index)
+	    			<li>
+	    				<a href="/files/actions.html?method=list&oc=all&infoSortId=$vMUtils.encrypt($!infosort.id)&statuses=$vMUtils.encrypt(0)&cm=dsag$index" #if( 'file'== $curMenu && $cm==$strIndex) class=menubg21 #else class=menubg2 #end>
+	    					$!infosort.name
+	    				</a>
+	    			</li>
+	    			#set($index=$index+1)
+	    			#end	
+	    		</ul>
+	    	</div>
     	</ul>
 	</div>
 
