--- a/web/WEB-INF/pages/filepigeonhole/form.vm
+++ b/web/WEB-INF/pages/filepigeonhole/form.vm
@@ -14,13 +14,13 @@
 			<td class="tablelistbg">$biz.infoColumn</td>
 			<td class="tablelistbg">$biz.infoColumnTo</td>
 			<td class="tablelistbg">
-				<a href="/infosort/actions.html?method=delete&sid=$vMUtils.encrypt($biz.id)&parentId=$vMUtils.encrypt($parentId)"  >É¾³ý</a>
+				<a href="/filepigeonhole/actions.html?method=delete&sid=$vMUtils.encrypt($biz.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&infoSortIdsTo=$vMUtils.encrypt($infoSortIdTo)&statuses=$vMUtils.encrypt($&status)&cm=$cm"  >É¾³ý</a>
 			</td>
          </tr>
 		#end
       </table>
 #end
-<br>
+<br><br>
 <table width="100%" border="0" cellpadding="4" cellspacing="1" >
 	<tr>
 		<td >
