--- a/web/WEB-INF/pages/common/timejs.vm
+++ b/web/WEB-INF/pages/common/timejs.vm
@@ -17,7 +17,7 @@
 	}
 </script>
 
-<body >
+<body onload="initArrangableNodes();">
 <font id=Clock face=ARIAL  color="#ffffff" fize=9pt align="left"></font>
                
 </body>
