--- a/web/WEB-INF/pages/common/top.vm
+++ b/web/WEB-INF/pages/common/top.vm
@@ -1,24 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>档案管理系统</title>
-<style type="text/css">
-<!--
-body {
-	margin-left: 0px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	font-size: 12px;
-}
--->
-</style>
-<link href="/css/style.css" rel="stylesheet" type="text/css" />
-<link href="/css/condet.css" rel="stylesheet" type="text/css" />
-<link href="/css/font.css" rel="stylesheet" type="text/css" />
-<LINK rel="stylesheet" type="text/css" href="/css/CssBops_lan.css">
-<LINK rel="stylesheet" type="text/css" href="/css/cnTree.css">
-<script language="JavaScript" src="/scripts/showmsg.js"></script>
-<script language="JavaScript" src="/scripts/dragtable.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=gb2312"/>
+    <title>档案管理系统</title>
+    <style type="text/css">
+        <!--
+        body {
+            margin-left: 0px;
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            font-size: 12px;
+        }
+
+        -->
+    </style>
+    <link href="/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/condet.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/font.css" rel="stylesheet" type="text/css"/>
+    <LINK rel="stylesheet" type="text/css" href="/css/CssBops_lan.css">
+    <LINK rel="stylesheet" type="text/css" href="/css/cnTree.css">
+    <link href="/css/font.css" rel="stylesheet" type="text/css"/>
+    <script language="JavaScript" src="/scripts/dragtable.js"></script>    
 </head>
