--- a/trunk/web/WEB-INF/pages/infosort/list.vm
+++ b/trunk/web/WEB-INF/pages/infosort/list.vm
@@ -64,7 +64,7 @@
     <table width="100%" border="0" cellspacing="4" cellpadding="0">
         <tr>
             <td align="left">
-                <input type=button name="insert" onclick="saveArrangableNodes();return false;" style="cursor:pointer"
+                <input type=button name="insert" onclick="saveArrangableNodes('infoSortForm');return false;" style="cursor:pointer"
                        value="±£´æ" class=btn1_mouseout title="±£´æ"/>
             </td>
         </tr>
