--- a/trunk/web/WEB-INF/pages/file/form.vm
+++ b/trunk/web/WEB-INF/pages/file/form.vm
@@ -115,16 +115,34 @@
 							<td class="tablelistbg">&nbsp;#if($!file.a49!='null')$!file.a49#end</td>
 							#elseif($strIndex=='a50')
 							<td class="tablelistbg">&nbsp;#if($!file.a50!='null')$!file.a50#end</td>
+							#elseif($strIndex=='a51')
+							<td class="tablelistbg">&nbsp;#if($!file.a51!='null')$!file.a51#end</td>
+							#elseif($strIndex=='a52')
+							<td class="tablelistbg">&nbsp;#if($!file.a52!='null')$!file.a52#end</td>
+							#elseif($strIndex=='a53')
+							<td class="tablelistbg">&nbsp;#if($!file.a53!='null')$!file.a53#end</td>
+							#elseif($strIndex=='a54')
+							<td class="tablelistbg">&nbsp;#if($!file.a54!='null')$!file.a54#end</td>
+							#elseif($strIndex=='a55')
+							<td class="tablelistbg">&nbsp;#if($!file.a55!='null')$!file.a55#end</td>
+							#elseif($strIndex=='a56')
+							<td class="tablelistbg">&nbsp;#if($!file.a56!='null')$!file.a56#end</td>
+							#elseif($strIndex=='a57')
+							<td class="tablelistbg">&nbsp;#if($!file.a57!='null')$!file.a57#end</td>
+							#elseif($strIndex=='a58')
+							<td class="tablelistbg">&nbsp;#if($!file.a58!='null')$!file.a58#end</td>
+							#elseif($strIndex=='a59')
+							<td class="tablelistbg">&nbsp;#if($!file.a59!='null')$!file.a59#end</td>
+							#elseif($strIndex=='a60')
+							<td class="tablelistbg">&nbsp;#if($!file.a60!='null')$!file.a60#end</td>
 							#end
 						#end
 					#end
 						<td class="tablelistbg">&nbsp;
-							##if($!infoSort.twoFloor!="")<a href="/file/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(1)&cm=$cm">新增$!infoSort.twoFloor</a>#end
-							#if($!infoSort.threeFloor!="")<a href="/file/actions.html?method=insert&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(2)&cm=$cm">新增$!infoSort.threeFloor</a>#end
-							
+							#if($!infoSort.threeFloor!="")<a href="/file/actions.html?method=insert&parInfoSortIds=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($file.id)&statuses=$vMUtils.encrypt(2)&cm=$cm">新增$!infoSort.threeFloor</a>#end
 							##if($file.a6!="126")	
-								<a href="/file/actions.html?method=update&sid=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(0)&cm=$cm"  >编辑</a>
-								<a href="/file/actions.html?method=delete&sid=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(0)&cm=$cm"  >删除</a>
+								<a href="/file/actions.html?method=update&sid=$vMUtils.encrypt($parInfoSortId)&parInfoSortIds=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt($status)&cm=$cm"  >编辑</a>
+								<a href="/file/actions.html?method=delete&sid=$vMUtils.encrypt($file.id)&parInfoSortIds=$vMUtils.encrypt($parInfoSortId)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt($status)&cm=$cm"  >删除</a>
 								<a href="/accessory/actions.html?method=insert&fileIds=$vMUtils.encrypt($file.id)&cm=$cm"  >添加原文</a>
 							##end
 							
@@ -158,9 +176,9 @@
 				#end
 				<input type=hidden name=infoSortId value=$!infoSortId>
 				#if($!parInfoSortId>0)
-				<input type=hidden name=parInfoSortId value=$!parInfoSortId>
+				<input type=text name=parInfoSortId value=$!parInfoSortId>
 				#else
-				<input type=hidden name=parInfoSortId value=$!bizObj.parInfoSortId>
+				<input type=text name=parInfoSortId value=$!bizObj.parInfoSortId>
 				#end
 				<input type=hidden name=status value=$!status>
 				<table width="100%" border="0" cellpadding="2" cellspacing="3">
@@ -269,6 +287,26 @@
 							#set($values=$!bizObj.a49)
 							#elseif($strIndex=='a50')
 							#set($values=$!bizObj.a50)
+							#elseif($strIndex=='a51')
+							#set($values=$!bizObj.a51)
+							#elseif($strIndex=='a52')
+							#set($values=$!bizObj.a52)
+							#elseif($strIndex=='a53')
+							#set($values=$!bizObj.a53)
+							#elseif($strIndex=='a54')
+							#set($values=$!bizObj.a54)
+							#elseif($strIndex=='a55')
+							#set($values=$!bizObj.a55)
+							#elseif($strIndex=='a56')
+							#set($values=$!bizObj.a56)
+							#elseif($strIndex=='a57')
+							#set($values=$!bizObj.a57)
+							#elseif($strIndex=='a58')
+							#set($values=$!bizObj.a58)
+							#elseif($strIndex=='a59')
+							#set($values=$!bizObj.a59)
+							#elseif($strIndex=='a60')
+							#set($values=$!bizObj.a60)
 							#end
 						#end
 						#if($status==1 && $biz.ifTwo==0)
