--- a/trunk/web/WEB-INF/pages/common/menu_new.vm
+++ b/trunk/web/WEB-INF/pages/common/menu_new.vm
@@ -71,7 +71,22 @@
 					</li>
 				</ul>
 				#set($index=$index+1)
-    			#end					
+    			#end
+    			
+    			#foreach($infosort in $vMUtils.getInfoSortByparentId(215))
+    			#set($strIndex="da"+$index)
+				#if($!infosort.id=="221")
+				<ul>
+					<li>
+						<a href="/file/actions.html?method=list&oc=all&infoSortId=$vMUtils.encrypt($!infosort.id)&statuses=$vMUtils.encrypt(0)&cm=da$index" #if( 'file'== $curMenu && $cm==$strIndex) class=menubg21 #else class=menubg2 #end>
+    					$!infosort.name
+    					</a>
+					</li>
+				</ul>
+				#end
+				#set($index=$index+1)
+    			#end
+    								
 			</div>
 			<li>
 				<a  onClick="javascript:showdesc(92)"  class=menubg>
